# Redblade

./: .gitignore  50-persistent-rs232.rules  README.md  bob_commit.sh  jamie_commit.sh  list_udevinfo.sh  rj_commit.sh
config/: field.txt  single_i_waypoints.csv  survey_enu.csv  survey_file.txt  survey_geodetic.csv  triple_i_waypoints.txt  waypoints_test.txt
config/pole_point/: survey_enu.csv
gazebo/: install.sh
launch/: Makefile  b110_test1.launch  calibrate_odometry.launch  gps_conv.launch  gps_example.launch  imu_tester.launch  pid_tester.launch  record.launch  redblade_world.launch  roboteq_angular.launch  roboteq_arduino.launch  roboteq_tester.launch  roboteq_tester2.launch  sensors.launch  single_i_path_planner.launch  stereo_camera.launch  survey.launch  survey_pole.launch  test_chad_vision.launch  test_vision.launch  topcon_dgps.launch  triple_i_path_planner.launch
launch/qual/: ekf.launch  pid.launch
launch/run/: ekf.launch  pid.launch  vision.launch
launch/test/: arduino.launch  ekf.launch  pid.launch  record.launch  vision.launch
redblade_control/: CMakeLists.txt
redblade_control/config/: redblade_control.yaml
redblade_control/launch/: redblade_control.launch
redblade_description/: CMakeLists.txt  package.xml
redblade_description/launch/: redblade_rviz.launch
redblade_description/src/: gen_gazebo.py
redblade_description/urdf/: materials.xacro  redblade.gazebo  redblade.urdf  redblade.xacro
redblade_gazebo/: CMakeLists.txt  package.xml
redblade_gazebo/launch/: redblade_world.launch
redblade_gazebo/worlds/: redblade.world
scripts/: angular.R  convert_bag_to_csv_zip.sh  data_collect.sh  list_udevinfo.sh  movingAverage.py  odom_test2.m  odom_test_binning.m  plot_angular.py  plot_ekf.py  plot_line.py  plot_stereo.py  plot_twist.py  plot_velocity.py  plot_vision.py  record.sh  survey_send.sh  survey_send_pole.sh  sync.py  velocity.py
scripts/ekf_matlab/: ekf.m  ekf_real_data.m  ekf_snowplow.m  laser_tester.m
scripts/path_planner/: check_angular_v.m  check_angular_v_1.m  check_data.m  check_ekf.m  check_ekf_2.m  check_single_i.m  rotation_matrix.m
scripts/pid_tuner/: PID_Constant_Calculator.m
scripts/rotation_tests/: rotmat.m  survey_test.m
src/: download_stereo.sh
src/ax2550/: CMakeLists.txt
src/ax2550/include/ax2550/: ax2550.h
src/ax2550/launch/: ax2550.launch
src/ax2550/src/: ax2550.cc  ax2550_node.cc
src/ax2550/src/ax2550/msg/: _Encoders.py  _StampedEncoders.py
src/b110_testing/: CMakeLists.txt  package.xml
src/b110_testing/src/: gps_record_node.cpp  ports1.txt  save_gps.cpp
src/gps_umd/gps_common/: CMakeLists.txt
src/microstrain_3dmgx2/src/: 3dmgx2.cc  imu_node.cc
src/odometry_skid_steer/: CMakeLists.txt  package.xml  package.xml~
src/odometry_skid_steer/include/: odometry_skid_steer.h
src/odometry_skid_steer/src/: basic_odometry_skid_steer.cpp  calibration.cpp  odometry_skid_steer.cpp  test_odometry_skid_steer.cpp
src/odometry_skid_steer/test/: test_basic_odometry_skid_steer.cpp  test_odometry_skid_steer.cpp
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/src/: path_planner_node.cpp  path_planner_node_version_2.cpp
src/redblade_arduino/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/redblade_arduino/src/: arduino.cpp  arduino.cpp~  arduino.hpp  arduino.hpp~  arduinoNode.cpp  arduinoNode.cpp~  arduinoNode.hpp  arduinoNode.hpp~
src/redblade_ax2550/: CMakeLists.txt  package.xml
src/redblade_ax2550/include/: odometry_skid_steer.h
src/redblade_ax2550/include/ax2550/: ax2550.h
src/redblade_ax2550/src/: ax2550.cc  ax2550_awd_node.cc  ax2550_node.cc  odometry_skid_steer.cpp
src/redblade_chad_laser/: CMakeLists.txt  package.xml
src/redblade_chad_laser/src/: chad_laser.cpp
src/redblade_control/: CMakeLists.txt  package.xml
src/redblade_control/config/: redblade_control.yaml
src/redblade_control/launch/: #redblade_control.launch#  .#redblade_control.launch  redblade_control.launch
src/redblade_control/src/: diffdrive_plugin.cc
src/redblade_description/: CMakeLists.txt
src/redblade_description/include/: ContactPlugin.hh  GpsPlugin.hh
src/redblade_description/launch/: display.launch~  redblade.rviz  redblade_rviz.launch  reload_redblade.launch
src/redblade_description/src/: ContactPlugin.cc  GpsPlugin.cc  gen_gazebo.py
src/redblade_description/urdf/: #redblade.xacro#  .#redblade.xacro  backup_redblade.urdf  gen_gazebo.py~  redblade.gazebo  redblade.urdf  redblade.xacro  redblade.xacro.backup  redblade_plow.xacro
src/redblade_ekf/: CMakeLists.txt  package.xml
src/redblade_ekf/src/: redblade_ekf.cpp  redblade_ekf.hpp  redblade_ekf_node.cpp  redblade_ekf_test_node.cpp
src/redblade_gazebo/: CMakeLists.txt  package.xml
src/redblade_gazebo/launch/: redblade.launch~  redblade_world.launch  redblade_world.launch~
src/redblade_gazebo/src/: imu_conversion.cc
src/redblade_gazebo/worlds/: redblade.world~
src/redblade_laser/: CMakeLists.txt  package.xml
src/redblade_laser/include/: redblade_laser.h
src/redblade_laser/src/: redblade_laser.cpp  redblade_laser_node.cpp
src/redblade_laser/test/: test_redblade_laser.cpp
src/redblade_rc/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/redblade_rc/src/: #arduinoRC.cpp#  arduinoRC.cpp  arduinoRC.cpp~  arduinoRC.hpp  arduinoRC.hpp~
src/redblade_stereo/: CMakeLists.txt  package.xml
src/redblade_stereo/include/: redblade_stereo.h
src/rosbag_parsers/: CMakeLists.txt  package.xml
src/snowplow_pid/: CMakeLists.txt  package.xml
src/snowplow_pid/src/: intersection_points.cpp  request_next_waypoints_server.cpp  snowplow_pid_deluxe_node.cpp  snowplow_pid_for_tuning.cpp  snowplow_pid_node.cpp  waypoint_management.cpp  waypoint_management.h
src/snowplow_pid/srv/: request_next_waypoints.srv
src/survey_snow_field/: CMakeLists.txt  package.xml
src/twist_msg_converter/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/twist_msg_converter/include/: twist_converter.h
src/twist_msg_converter/src/: twist_basic_converter.cpp  twist_conv_node.cpp  twist_converter.cpp
(+15 files in other folders)
