<?xml version="1.0"?>
<package>
  <name>odometry_skid_steer</name>
  <version>0.0.0</version>
  <description>Package which uses encoder outputs to determine a position.</description>

  <maintainer email="colerc2@miamioh.edu">Bob Cole</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospytf</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospytf</run_depend>
  <run_depend>std_msgs</run_depend>

</package>